--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ edition = "2021"
 # ordered-float = "=3.7.0"
 # ascii = "=1.1.0"
 # permutohedron = "=0.2.4"
-# superslice = "=1.0.0"
+superslice = "=1.0.0"
 itertools = "=0.11.0"
 # itertools-num = "=0.1.3"
 # maplit = "=1.0.2"
